add routing with router-outlet for better navigation

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,3 @@
-<app-header></app-header
-><main>
-  <div class="main-section">
-    <img src="./assets/images/istockphoto-1171254637-612x612.jpg" alt="main_section_photo" class="main_img">
-  </div>
-  <router-outlet />
-</main>
+<app-header></app-header>
+<app-main-section></app-main-section>
 <app-footer></app-footer>
