--- a/src/app/components/app-header/app-header.component.html
+++ b/src/app/components/app-header/app-header.component.html
@@ -4,8 +4,8 @@
     </div>
     <nav class="header_nav">
       <ul class="nav_list">
-        <li><a href="">Home</a></li>
-        <li><a href="">News</a></li>
+        <li><a routerLink="">Home</a></li>
+        <li><a routerLink="/news">News</a></li>
         <li><a href="">Gallery</a></li>
         <li><a href="">About Us</a></li>
         <li><a href="">Contacts</a></li>
