main add about-us content and pictures for better content

--- a/src/app/components/app-footer/app-footer.component.html
+++ b/src/app/components/app-footer/app-footer.component.html
@@ -1,4 +1,4 @@
-<div class="footer_about-us">
+<div class="footer">
   <div class="about-us">
     <h4>About Us</h4>
     <p class="about-us_description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci atque error magnam mollitia tempora, tempore
@@ -25,4 +25,5 @@
     </ul>
   </div>
 </div>
+<p class="footer_version">v.0.1.1</p>
 
