--- a/src/app/components/app-footer/app-footer.component.css
+++ b/src/app/components/app-footer/app-footer.component.css
@@ -1,8 +1,8 @@
-.footer_about-us {
+.footer {
   display: flex;
   justify-content: space-around;
-  /*background-color: #4646f4;*/
-  background: rgba(70, 70, 244, 0.5);
+  background: #CAADAF;
+  /*background: rgba(0, 0, 0, 0.7);*/
   color: ivory;
   font-size: 18px;
 }
@@ -14,4 +14,10 @@
 .contacts_list{
   list-style: none;
   padding: 0  ;
+}
+
+.footer_version {
+  margin: 0 10px;
+  padding: 0;
+  text-align: right;
 }
