--- a/src/app/components/app-header/app-header.component.css
+++ b/src/app/components/app-header/app-header.component.css
@@ -2,11 +2,17 @@ header {
   position: fixed;
   top:0;
   width: 100%;
-  background-color: #5e5edc;
+  height: 75px;
+  background: rgb(209,208,215);
+  background: linear-gradient(90deg, rgba(209,208,215,1) 0%, rgba(202,173,175,1) 48%);
   display: flex;
   justify-content: space-between;
   align-items: center;
   z-index: 1;
+}
+
+header:hover {
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.3);
 }
 
 .header_nav {
@@ -20,16 +26,16 @@ header {
 .header_logo {
   position: absolute;
   border-radius: 50%;
-  top: -4px;
-  left: -4px;
-  height: 100px;
+  top: -5px;
+  left: -3px;
+  height: 98px;
   width: auto;
   object-fit: contain;
   transition: height 0.5s ease;
 }
 
 header.shrink {
-  height: 40px;
+  height: 60px;
 
 }header.shrink .header_logo {
   height: 100%;
@@ -38,19 +44,30 @@ header.shrink {
 .nav_list {
   list-style: none;
   display: flex;
+  align-items: center;
 }
 
 .nav_list li {
-  margin: 0 10px;
-  font-size: 20px;
+  margin: 0 15px;
+  font-size: 23px;
 }
 
 .nav_list a {
-  color: ivory;
+  color: white;
   text-decoration: none;
 }
 
+.active-link {
+  color: #0c0d0c;
+}
+
 .nav_list a:hover {
+  color: #ededd2;
+  font-size: 26px;
+  text-decoration: none;
+}
+
+#contacts_link{
   color: #ededd2;
   text-decoration: none;
 }
@@ -58,4 +75,24 @@ header.shrink {
 .nav_list a:focus {
   color: #6ec7e1;
   text-decoration: none;
+}
+
+.contacts_link {
+  background-color:#383b38;
+  border-radius:28px;
+  border:1px solid #b2c1b2;
+  display:inline-block;
+  cursor:pointer;
+  color:#ffffff;
+  font-size:17px;
+  padding:16px 31px;
+  text-decoration:none;
+  text-shadow:0px 1px 0px #2f6627;
+}
+.contacts_link:hover {
+  background-color:#0c0d0c;
+}
+.contacts_link:active {
+  position:relative;
+  top:1px;
 }
