--- a/src/app/components/app-header/app-header.component.html
+++ b/src/app/components/app-header/app-header.component.html
@@ -4,11 +4,13 @@
     </div>
     <nav class="header_nav">
       <ul class="nav_list">
-        <li><a routerLink="">Home</a></li>
-        <li><a routerLink="/news">News</a></li>
-        <li><a href="">Gallery</a></li>
-        <li><a href="">About Us</a></li>
-        <li><a href="">Contacts</a></li>
+        <li><a routerLink="" routerLinkActive="active-link">Начало</a></li>
+        <li><a routerLink="/news" routerLinkActive="active-link">Новини</a></li>
+        <li><a routerLink="/prices" routerLinkActive="active-link">Цени</a></li>
+        <li><a routerLink="/reservations" routerLinkActive="active-link">Резервации</a></li>
+        <li><a routerLink="/gallery" routerLinkActive="active-link">Галерия</a></li>
+        <li><a routerLink="/about-us" routerLinkActive="active-link">За Нас</a></li>
+        <li><a routerLink="/contacts" id="contacts_link" class="contacts_link">Контакти</a></li>
       </ul>
     </nav>
 </header>
