--- a/src/app/components/app-main-section/components/main-page-section/app-main-page-section.component.css
+++ b/src/app/components/app-main-section/components/main-page-section/app-main-page-section.component.css
@@ -1,4 +1,12 @@
 .main_img {
   width: 100%;
+  height: 100%;
   opacity: 60%;
+  margin-top: -100px;
+  object-fit: cover;
 }
+
+/*.main-section {*/
+/*  width: 100%;*/
+
+/*}*/
