--- a/src/app/components/app-main-section/components/main-page-section/app-main-page-section.component.html
+++ b/src/app/components/app-main-section/components/main-page-section/app-main-page-section.component.html
@@ -1,3 +1,3 @@
-<div class="main-section">
-  <img src="./assets/images/istockphoto-1171254637-612x612.jpg" alt="main_section_photo" class="main_img">
+<div class="main-section" >
+<h1>ReformFlow</h1>
 </div>
