--- a/src/app/components/app-header/app-header.component.css
+++ b/src/app/components/app-header/app-header.component.css
@@ -16,6 +16,16 @@ nav {
   align-items: center;
 }
 
+
+select {
+  padding: 3px;
+  font-size: 16px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  appearance: auto;
+  cursor: pointer;
+}
+
 header:hover {
   box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.3);
 }
@@ -54,7 +64,8 @@ header.shrink .header_logo {
   align-items: center;
 }
 
-.translate_bts{
+.language-select {
+  position: relative;
   display: inline-block;
 }
 
@@ -128,3 +139,4 @@ header.shrink .header_logo {
   background-color: #8bbcdc;
   font-size: 20px;
 }
+
