--- a/src/app/components/app-main-section/components/main-page-section/app-main-page-section.component.html
+++ b/src/app/components/app-main-section/components/main-page-section/app-main-page-section.component.html
@@ -1,3 +1,12 @@
-<div class="main-section" >
-<h1>ReformFlow</h1>
+<div class="main-section">
+  <div class="main-section_block">
+    <h1>ReformFlow</h1>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab amet animi asperiores consequatur culpa, deserunt
+      dolor est eveniet explicabo id ipsam iste nemo officiis quaerat sequi ullam ut voluptate voluptates?</p>
+  </div>
+  <div class="main-section_block">
+    <h1>Where do we come from?</h1>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab amet animi asperiores consequatur culpa, deserunt
+      dolor est eveniet explicabo id ipsam iste nemo officiis quaerat sequi ullam ut voluptate voluptates?</p>
+  </div>
 </div>
