add condition for the version display at the bottom of the site

--- a/src/app/components/app-footer/app-footer.component.html
+++ b/src/app/components/app-footer/app-footer.component.html
@@ -25,5 +25,5 @@
     </ul>
   </div>
 </div>
-<p class="footer_version">v.0.1.1</p>
+<p *ngIf="currentBranch === 'development'" class="footer_version">v.0.1.4</p>
 
