add social media list in footer, adjust contacts list styling and  adjust footer for translation

--- a/src/app/components/app-footer/app-footer.component.html
+++ b/src/app/components/app-footer/app-footer.component.html
@@ -1,27 +1,24 @@
 <div class="footer">
-  <div class="about-us">
-    <h4>About Us</h4>
-    <p class="about-us_description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci atque error magnam mollitia tempora, tempore
-      voluptas<!doctype html>
-      <html lang="en">
-      <head>
-        <meta charset="UTF-8">
-        <meta name="viewport"
-              content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-        <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <title>Document</title>
-      </head>
-      <body>
-
-      </body>
-      </html>.</p>
+  <div class="about-us_container">
+    <h4>{{ 'MAIN.FOOTER.ABOUT_US' | translate }}</h4>
+    <p class="about-us_description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci atque error
+      magnam mollitia tempora, tempore, atque error
+      magnam mollitia tempora, tempore</p>
   </div>
-  <div class="contacts">
-    <h4>Contacts</h4>
+  <div class="social-media_container">
+    <h4 class="social-media_heading">{{ 'MAIN.FOOTER.SOCIAL_MEDIA.HEADER' | translate }}</h4>
+    <ul class="social-media_list">
+      <li><img src="./assets/images/instagram-logo-splatter-1.png" alt="instagram logo"><a href="">Instagram</a></li>
+      <li><img src="./assets/images/facebook_logo.png" alt="facebook logo"><a href="">Facebook</a></li>
+    </ul>
+  </div>
+  <div class="contacts_container">
+    <h4>{{ 'MAIN.FOOTER.CONTACTS.HEADER' | translate }}</h4>
     <ul class="contacts_list">
-      <li><a type="phone" href="">08888888</a></li>
-      <li><a href="">Location</a></li>
-      <li><a type="mail" href="">{{ 'ven@abv.bg' }}</a></li>
+      <li><i class="fa-solid fa-phone"></i><a type="phone" href="">+359 88888888</a></li>
+      <li><i class="fa-solid fa-location-arrow"></i><a
+        href="">{{ 'MAIN.FOOTER.CONTACTS.CONTACTS_LIST.LOCATION' | translate }}</a></li>
+      <li><i class="fa-solid fa-envelope"></i><a type="mail" href="">{{ 'ven@abv.bg' }}</a></li>
     </ul>
   </div>
 </div>
