--- a/src/app/components/app-footer/app-footer.component.css
+++ b/src/app/components/app-footer/app-footer.component.css
@@ -2,22 +2,78 @@
   display: flex;
   justify-content: space-around;
   background: #CAADAF;
-  /*background: rgba(0, 0, 0, 0.7);*/
   color: ivory;
   font-size: 18px;
 }
 
-.about-us_description{
-  width: 30%;
+.footer h4 {
+  font-size: 24px;
+  font-weight: lighter;
+  margin-bottom: 20px;
 }
 
-.contacts_list{
+.social-media_heading {
+  margin-bottom: 11px !important;
+}
+
+.about-us_container {
+  flex: 1;
+  margin-left: 100px;
+}
+
+.social-media_container {
+  flex: 1;
+  margin-left: 250px;
+}
+
+.social-media_list {
+  padding-left: 0;
+  margin-top: 0;
+  margin-left: -10px;
+}
+
+.social-media_container li {
+  display: flex;
+  align-items: center;
   list-style: none;
-  padding: 0  ;
+}
+
+.social-media_container li img {
+  width: 50px;
+  height: 50px;
+  list-style: none;
+}
+
+.social-media_container li a {
+  text-decoration: none;
+}
+
+.contacts_container {
+  flex: 1;
+  margin-left: 100px;
+}
+
+.contacts_list {
+  list-style: none;
+  padding: 0;
 }
 
 .footer_version {
   margin: 0 10px;
   padding: 0;
   text-align: right;
+}
+
+.contacts_list li {
+  list-style: none;
+  margin-bottom: 10px;
+
+}
+
+.contacts_list li a {
+  text-decoration: none;
+}
+
+.contacts_list li i {
+  margin-right: 10px;
 }
