--- a/src/app/components/app-main-section/components/main-page-section/app-main-page-section.component.html
+++ b/src/app/components/app-main-section/components/main-page-section/app-main-page-section.component.html
@@ -1,10 +1,13 @@
 <div class="main-section">
-  <div class="main-section_block">
-    <h1>ReformFlow</h1>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab amet animi asperiores consequatur culpa, deserunt
-      dolor est eveniet explicabo id ipsam iste nemo officiis quaerat sequi ullam ut voluptate voluptates?</p>
-  </div>
-  <div class="main-section_block">
+  <div class="intro-hero">
+    <img src="./assets/images/image.jpg" alt="main-section image">
+    <div class="intro-hero__text-content">
+      <h1 class="intro-hero__title">ReformFlow</h1>
+      <h2 class="intro-hero__subtitle">{{ 'MAIN.HONE.SUBTITLE' | translate }}</h2>
+      <p class="intro-hero__paragraph">Providing the best care for your body and mind that will be appreciated by your
+        <b>soul.</b></p>
+      <a href="" class="btn">{{ 'MAIN.HONE.GET_IN_TOUCH' | translate }}</a>
+    </div>
     <h1>Where do we come from?</h1>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab amet animi asperiores consequatur culpa, deserunt
       dolor est eveniet explicabo id ipsam iste nemo officiis quaerat sequi ullam ut voluptate voluptates?</p>
