--- a/src/app/components/app-main-section/components/main-page-section/app-main-page-section.component.html
+++ b/src/app/components/app-main-section/components/main-page-section/app-main-page-section.component.html
@@ -3,10 +3,10 @@
     <img src="./assets/images/image.jpg" alt="main-section image">
     <div class="intro-hero__text-content">
       <h1 class="intro-hero__title">ReformFlow</h1>
-      <h2 class="intro-hero__subtitle">{{ 'MAIN.HONE.SUBTITLE' | translate }}</h2>
+      <h2 class="intro-hero__subtitle">{{ 'MAIN.HOME.SUBTITLE' | translate }}</h2>
       <p class="intro-hero__paragraph">Providing the best care for your body and mind that will be appreciated by your
         <b>soul.</b></p>
-      <a href="" class="btn">{{ 'MAIN.HONE.GET_IN_TOUCH' | translate }}</a>
+      <a href="" class="btn">{{ 'MAIN.HOME.GET_IN_TOUCH' | translate }}</a>
     </div>
     <h1>Where do we come from?</h1>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab amet animi asperiores consequatur culpa, deserunt
