add additional block with info

--- a/src/app/components/app-main-section/components/main-page-section/app-main-page-section.component.html
+++ b/src/app/components/app-main-section/components/main-page-section/app-main-page-section.component.html
@@ -8,8 +8,13 @@
         <b>soul.</b></p>
       <a href="" class="btn">{{ 'MAIN.HOME.GET_IN_TOUCH' | translate }}</a>
     </div>
-    <h1>Where do we come from?</h1>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab amet animi asperiores consequatur culpa, deserunt
-      dolor est eveniet explicabo id ipsam iste nemo officiis quaerat sequi ullam ut voluptate voluptates?</p>
+
+  </div>
+  <div class="middle-hero">
+    <img src="./assets/images/pilates_stretch.jpg" alt="main-section stretch image">
+    <div class="middle-hero__text-content">
+      <h1 class="middle-hero__title">{{ 'MAIN.HOME.MIDDLE_HEADING' | translate }}</h1>
+      <p class="middle-hero__paragraph">{{'MAIN.HOME.MIDDLE_PARAGRAPH' | translate }}</p>
+    </div>
   </div>
 </div>
