add more content and styling for the main home-page

--- a/src/app/components/app-main-section/components/main-page-section/app-main-page-section.component.html
+++ b/src/app/components/app-main-section/components/main-page-section/app-main-page-section.component.html
@@ -8,13 +8,21 @@
         <b>soul.</b></p>
       <a href="" class="btn">{{ 'MAIN.HOME.GET_IN_TOUCH' | translate }}</a>
     </div>
-
   </div>
-  <div class="middle-hero">
-    <img src="./assets/images/pilates_stretch.jpg" alt="main-section stretch image">
+  <div class="middle-hero page-section">
     <div class="middle-hero__text-content">
       <h1 class="middle-hero__title">{{ 'MAIN.HOME.MIDDLE_HEADING' | translate }}</h1>
       <p class="middle-hero__paragraph">{{'MAIN.HOME.MIDDLE_PARAGRAPH' | translate }}</p>
+      <img  class="middle-hero__img" src="./assets/images/pilates_stretch.jpg" alt="main-section stretch image">
+    </div>
+  </div>
+  <div class="row row--gutters page-section">
+    <div class="row__4">
+      <img class="story-hero__img" src="./assets/images/owner.jpeg" alt="owner image">
+    </div>
+    <div class="row__8">
+      <h1 class="story-hero__heading">{{ 'MAIN.HOME.STORY_HEADING' | translate }}</h1>
+      <p class="story-hero__paragraph">{{ 'MAIN.HOME.STORY_PARAGRAPH' | translate }}</p>
     </div>
   </div>
 </div>
