--- a/src/app/components/app-footer/app-footer.component.html
+++ b/src/app/components/app-footer/app-footer.component.html
@@ -1,21 +1,21 @@
 <div class="footer">
   <div class="about-us_container">
-    <h4>{{ 'MAIN.FOOTER.ABOUT_US' | translate }}</h4>
-    <p class="about-us_description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci atque error
+    <h4 class="about-us_container__heading">{{ 'MAIN.FOOTER.ABOUT_US' | translate }}</h4>
+    <p class="about-us_container__description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci atque error
       magnam mollitia tempora, tempore, atque error
       magnam mollitia tempora, tempore</p>
   </div>
   <div class="social-media_container">
-    <h4 class="social-media_heading">{{ 'MAIN.FOOTER.SOCIAL_MEDIA.HEADER' | translate }}</h4>
-    <ul class="social-media_list">
+    <h4 class="social-media_container__heading">{{ 'MAIN.FOOTER.SOCIAL_MEDIA.HEADER' | translate }}</h4>
+    <ul class="social-media_container__list">
       <li><img src="./assets/images/instagram-logo-splatter-1.png" alt="instagram icon"><a href="">Instagram</a></li>
       <li><img src="./assets/images/facebook_logo.png" alt="facebook icon"><a href="">Facebook</a></li>
       <li><img src="./assets/images/tiktok-icon.png" alt="tiktok icon"><a href="">TikTok</a></li>
     </ul>
   </div>
   <div class="contacts_container">
-    <h4>{{ 'MAIN.FOOTER.CONTACTS.HEADER' | translate }}</h4>
-    <ul class="contacts_list">
+    <h4 class="contacts_container__heading">{{ 'MAIN.FOOTER.CONTACTS.HEADER' | translate }}</h4>
+    <ul class="contacts_container__list">
       <li><i class="fa-solid fa-phone"></i><a type="phone" href="">+359 88888888</a></li>
       <li><i class="fa-solid fa-location-arrow"></i><a
         href="">{{ 'MAIN.FOOTER.CONTACTS.CONTACTS_LIST.LOCATION' | translate }}</a></li>
@@ -23,5 +23,4 @@
     </ul>
   </div>
 </div>
-<p *ngIf="currentBranch === 'development'" class="footer_version">v.0.1.4</p>
 
