--- a/src/assets/base/_mixins.scss
+++ b/src/assets/base/_mixins.scss
@@ -3,3 +3,15 @@
     @content;
   }
 }
+
+@mixin atMedium {
+  @media (min-width: 800px) {
+    @content;
+  }
+}
+
+@mixin atLarge {
+  @media (min-width: 1200px) {
+    @content;
+  }
+}
