--- a/src/assets/modules/_row.scss
+++ b/src/assets/modules/_row.scss
@@ -13,10 +13,25 @@
     }
   }
 
+  &--gutters-large {
+
+    @include atMedium {
+      padding-right: -100px;
+    }
+  }
+
   &--gutters > div {
 
     @include atMedium {
       padding-right: 65px;
+      box-sizing: border-box;
+    }
+  }
+
+  &--gutters-large > div {
+
+    @include atMedium {
+      padding-right: 100px;
       box-sizing: border-box;
     }
   }
@@ -26,6 +41,14 @@
     @include atMedium {
       float: left;
       width: 33.33%;
+    }
+  }
+
+  &__6 {
+
+    @include atMedium {
+      float: left;
+      width: 50%;
     }
   }
 
