fix bottom padding by last row feature item

--- a/src/app/components/app-main-section/components/main-page-section/app-main-page-section.component.scss
+++ b/src/app/components/app-main-section/components/main-page-section/app-main-page-section.component.scss
@@ -191,6 +191,11 @@
     font-size: 1rem;
     font-weight: 100;
     margin-bottom: 50px;
+    text-align: center;
+
+    @include atMedium {
+      text-align: left;
+    }
   }
 
   @include atSmall {
