--- a/src/app/components/app-footer/app-footer.component.html
+++ b/src/app/components/app-footer/app-footer.component.html
@@ -8,8 +8,8 @@
   <div class="social-media_container">
     <h4 class="social-media_container__heading">{{ 'MAIN.FOOTER.SOCIAL_MEDIA.HEADER' | translate }}</h4>
     <ul class="social-media_container__list">
-      <li><img src="./assets/images/instagram-logo-splatter-1.png" alt="instagram icon"><a href="">Instagram</a></li>
-      <li><img src="./assets/images/facebook_logo.png" alt="facebook icon"><a href="">Facebook</a></li>
+      <li><img src="./assets/icons/instagram.svg" alt="instagram icon"><a href="">Instagram</a></li>
+      <li><img src="./assets/icons/facebook.svg" alt="facebook icon"><a href="">Facebook</a></li>
       <li><img src="./assets/images/tiktok-icon.png" alt="tiktok icon"><a href="">TikTok</a></li>
     </ul>
   </div>
