--- a/src/app/components/app-footer/app-footer.component.scss
+++ b/src/app/components/app-footer/app-footer.component.scss
@@ -69,6 +69,7 @@
     display: flex;
     align-items: center;
     list-style: none;
+    margin-bottom: 0.9375rem;
 
     img {
       width: 40px;
@@ -105,7 +106,7 @@
 
     li {
       list-style: none;
-      margin-bottom: 10px;
+      margin-bottom: 1.25rem;
 
       a {
         text-decoration: none;
