--- a/src/app/components/app-footer/app-footer.component.scss
+++ b/src/app/components/app-footer/app-footer.component.scss
@@ -1,29 +1,12 @@
-@mixin atSmall {
-  @media (min-width: 530px) {
-    @content;
-  }
-}
-
-@mixin atMedium {
-  @media (min-width: 800px) {
-    @content;
-  }
-}
-
-@mixin atLarge {
-  @media (min-width: 1200px) {
-    @content;
-  }
-}
-
+@import '../../../assets/base/global';
 
 .footer {
   display: flex;
   justify-content: space-around;
   background: #CAADAF;
   color: ivory;
-  font-size: 18px;
-  padding: 24px 0 50px;
+  font-size: 1.125rem;
+  padding: 1.5rem 0 3.125rem;
   flex-direction: column;
   align-items: center;
 
@@ -33,9 +16,9 @@
   }
 
   h4 {
-    font-size: 24px;
+    font-size: 1.5rem;
     font-weight: lighter;
-    margin-bottom: 20px;
+    margin-bottom: 1.25rem;
   }
 
 }
@@ -52,7 +35,7 @@
 
   &__description {
     text-align: center;
-    max-width: 250px;
+    max-width: 15.625rem;
   }
 }
 
@@ -72,21 +55,20 @@
     margin-bottom: 0.9375rem;
 
     img {
-      width: 40px;
-      height: 40px;
+      width: 2.5rem;
+      height: 2.5rem;
       list-style: none;
     }
 
     a {
       text-decoration: none;
-      margin-left: 5px;
+      margin-left: 0.3125rem;
     }
   }
 
   &__list {
     padding-left: 0;
     margin-top: 0;
-    margin-left: -10px;
   }
 }
 
