add prices table px must be adjusted to rem WIP

--- a/src/app/components/app-main-section/components/prices-page-section/prices-page-section.component.html
+++ b/src/app/components/app-main-section/components/prices-page-section/prices-page-section.component.html
@@ -1,1 +1,43 @@
-<p>prices-page-section works!</p>
+<section id="pilates-prices" class="pilates-prices-section">
+  <div class="container">
+    <h2 class="section-title">Pilates Plans</h2>
+    <p class="section-description">Find the best pilates plan that fits your needs and lifestyle.</p>
+
+    <table class="price-table">
+      <thead>
+      <tr>
+        <th>Membership Plan</th>
+        <th>Price</th>
+        <th>Classes per Week</th>
+        <th>Features</th>
+      </tr>
+      </thead>
+      <tbody>
+      <tr>
+        <td>Basic Pilates</td>
+        <td>30lv</td>
+        <td>1 Class</td>
+        <td>Basic training of the core and body using a reformer.</td>
+      </tr>
+      <tr>
+        <td>Intermediate Pilates</td>
+        <td>50lv</td>
+        <td>3 Classes</td>
+        <td>More complex and intersive training, which will boost your energy.</td>
+      </tr>
+      <tr>
+        <td>Exper Pilates</td>
+        <td>60lv</td>
+        <td>3 Classes</td>
+        <td>High intensive and extended training of the core providing more stamina and endurance.</td>
+      </tr>
+      <tr>
+        <td>Individual Training</td>
+        <td>50lv</td>
+        <td>1 Class</td>
+        <td>Individual full 1on1 training with indepth explanation.</td>
+      </tr>
+      </tbody>
+    </table>
+  </div>
+</section>
