--- a/src/app/components/app-main-section/components/prices-page-section/prices-page-section.component.scss
+++ b/src/app/components/app-main-section/components/prices-page-section/prices-page-section.component.scss
@@ -8,41 +8,41 @@
 
 
 #pilates-prices {
-  padding: 40px 0;
+  padding: 2.5rem 0;
   background-color: #f9f9f9;
 }
 
 .container {
-  max-width: 1200px;
+  max-width: 75rem;
   margin: 0 auto;
-  padding: 0 20px;
+  padding: 0 1.25rem;
 }
 
 .section-title {
   color: $mainRoseAsh;
 }
 
-.section-description{
+.section-description {
   text-align: center;
-  font-size: 20px;
-  margin-bottom: 40px;
+  font-size: 1.25rem;
+  margin-bottom: 2.5rem;
 }
 
 .price-table {
   width: 100%;
-  margin-top: 20px;
+  margin-top: 2.5rem;
   border-collapse: collapse;
 }
 
 .price-table th, .price-table td {
   text-align: center;
-  padding: 15px;
-  border: 1px solid #ddd;
+  padding: 0.9375rem;
+  border: 0.0625rem solid #ddd;
 }
 
 .price-table th {
   background-color: #f4f4f4;
-  font-size: 18px;
+  font-size: 1.125rem;
 }
 
 .price-table td {
