add prices for different types of trainings and translation

--- a/src/app/components/app-main-section/components/prices-page-section/prices-page-section.component.scss
+++ b/src/app/components/app-main-section/components/prices-page-section/prices-page-section.component.scss
@@ -22,6 +22,10 @@
   color: $mainRoseAsh;
 }
 
+.group_trainings_title {
+  margin-top: 12.5rem;
+}
+
 .section-description {
   text-align: center;
   font-size: 1.25rem;
