--- a/src/app/components/app-main-section/components/prices-page-section/prices-page-section.component.html
+++ b/src/app/components/app-main-section/components/prices-page-section/prices-page-section.component.html
@@ -3,39 +3,87 @@
     <h2 class="section-title">Pilates Plans</h2>
     <p class="section-description">Find the best pilates plan that fits your needs and lifestyle.</p>
 
+    <h1 class="section-title group_trainings_title">{{ 'MAIN.PRICES.GROUP_TRAININGS' | translate }}</h1>
     <table class="price-table">
       <thead>
       <tr>
-        <th>Membership Plan</th>
-        <th>Price</th>
-        <th>Classes per Week</th>
-        <th>Features</th>
+        <th>{{ 'MAIN.PRICES.TABLE.CLASSES' | translate }}</th>
+        <th>{{ 'MAIN.PRICES.TABLE.PRICES' | translate }}</th>
+        <th>{{ 'MAIN.PRICES.TABLE.VISITS' | translate }}</th>
       </tr>
       </thead>
       <tbody>
       <tr>
-        <td>Basic Pilates</td>
-        <td>30lv</td>
-        <td>1 Class</td>
-        <td>Basic training of the core and body using a reformer.</td>
+        <td>1 {{ 'MAIN.PRICES.TABLE.TRAINING' | translate }}</td>
+        <td>35 BGN</td>
+        <td>{{ 'MAIN.PRICES.TABLE.SINGLE_TRAINING' | translate }}</td>
       </tr>
       <tr>
-        <td>Intermediate Pilates</td>
-        <td>50lv</td>
-        <td>3 Classes</td>
-        <td>More complex and intersive training, which will boost your energy.</td>
+        <td>4 {{ 'MAIN.PRICES.TABLE.TRAININGS' | translate }}</td>
+        <td>120 BGN</td>
+        <td>{{ 'MAIN.PRICES.TABLE.PER_MONTH' | translate }}</td>
       </tr>
       <tr>
-        <td>Exper Pilates</td>
-        <td>60lv</td>
-        <td>3 Classes</td>
-        <td>High intensive and extended training of the core providing more stamina and endurance.</td>
+        <td>8 {{ 'MAIN.PRICES.TABLE.TRAININGS' | translate }}</td>
+        <td>200 BGN</td>
+        <td>{{ 'MAIN.PRICES.TABLE.PER_MONTH' | translate }}</td>
       </tr>
       <tr>
-        <td>Individual Training</td>
-        <td>50lv</td>
-        <td>1 Class</td>
-        <td>Individual full 1on1 training with indepth explanation.</td>
+        <td>12 {{ 'MAIN.PRICES.TABLE.TRAININGS' | translate }}</td>
+        <td>270 BGN</td>
+        <td>{{ 'MAIN.PRICES.TABLE.PER_MONTH' | translate }}</td>
+      </tr>
+      <tr>
+        <td>12 {{ 'MAIN.PRICES.TABLE.TRAININGS' | translate }}</td>
+        <td>300 BGN</td>
+        <td>{{ 'MAIN.PRICES.TABLE.UNLIMITED' | translate }}</td>
+      </tr>
+      <tr>
+        <td>20 {{ 'MAIN.PRICES.TABLE.TRAININGS' | translate }}</td>
+        <td>400 BGN</td>
+        <td>{{ 'MAIN.PRICES.TABLE.UNLIMITED' | translate }}</td>
+      </tr>
+      </tbody>
+    </table>
+    <h1 class="section-title group_trainings_title">{{ 'MAIN.PRICES.INDIVIDUAL_TRAININGS' | translate }}</h1>
+    <table class="price-table">
+      <thead>
+      <tr>
+        <th>Classes</th>
+        <th>Prices</th>
+        <th>Visits</th>
+      </tr>
+      </thead>
+      <tbody>
+      <tr>
+        <td>1 Training</td>
+        <td>45 BGN</td>
+        <td>Single training</td>
+      </tr>
+      <tr>
+        <td>4 Trainings</td>
+        <td>168 BGN</td>
+        <td>per month</td>
+      </tr>
+      <tr>
+        <td>8 trainings</td>
+        <td>320 BGN</td>
+        <td>per month</td>
+      </tr>
+      <tr>
+        <td>12 trainings</td>
+        <td>420 BGN</td>
+        <td>per month</td>
+      </tr>
+      <tr>
+        <td>12 trainings</td>
+        <td>500 BGN</td>
+        <td>Unlimited period</td>
+      </tr>
+      <tr>
+        <td>20 trainings</td>
+        <td>650 BGN</td>
+        <td>Unlimited period</td>
       </tr>
       </tbody>
     </table>
